--- a/backend/WebApi/appsettings.Development.json
+++ b/backend/WebApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "TripAppDbContext": "Host=172.17.0.2;Port=5432;Database=trip;Username=postgres;Password=admin123"
   }
 }
