--- a/backend/Domain/Domain.csproj
+++ b/backend/Domain/Domain.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NetTopologySuite" Version="2.5.0" />
+  </ItemGroup>
+
 </Project>
