--- a/backend/WebApi/appsettings.Development.json
+++ b/backend/WebApi/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "TripAppDbContext": "Host=localhost;Port=5432;Database=trip;Username=postgres;Password=admin123"
+    "TripAppDbContext": "Host=localhost;Port=5432;Database=trip;Username=postgres;Password=2090870"
   }
 }
