Добавил обновление роута, пофиксил аутентификацию, добавил тип для вывода координат

--- a/backend/WebApi/appsettings.Development.json
+++ b/backend/WebApi/appsettings.Development.json
@@ -7,5 +7,9 @@
   },
   "ConnectionStrings": {
     "TripAppDbContext": "Host=localhost;Port=5432;Database=trip;Username=postgres;Password=2090870"
+  },
+  "Jwtoptions": {
+    "SecretKey": "942F9F3FD88AC81E7722111BB27D11TYUYEjU",
+    "ExpiresHours": "12"
   }
 }
