Добавила CRUD тега, отзыва, отформатировала код

--- a/backend/.editorconfig
+++ b/backend/.editorconfig
@@ -13,7 +13,9 @@ tab_width = 4
 
 # Предпочтения для новых строк
 end_of_line = crlf
-insert_final_newline = false
+
+max_line_length = 120
+insert_final_newline = true
 
 #### Рекомендации по написанию кода .NET ####
 
@@ -229,3 +231,5 @@ dotnet_naming_style.begins_with_i.required_prefix = I
 dotnet_naming_style.begins_with_i.required_suffix = 
 dotnet_naming_style.begins_with_i.word_separator = 
 dotnet_naming_style.begins_with_i.capitalization = pascal_case
+
+
